--- a/index.html
+++ b/index.html
@@ -13,36 +13,36 @@
 
 <div class="bg-white size-1/5 h-lvh">
     <div class="w-full h-20 pl-8 pt-4">
-<img src="/soundix logo.png" class="inline" alt="">
+<img src="soundix logo.png" class="inline" alt="">
 <h1 class="text-sky-400 font-extrabold text-xl inline pl-4">Soundix.</h1>
     </div>
 <div class="pl-8 flex flex-col gap-3 ">
    <div class="flex flex-row align-middle  ">
-     <h1 class="inline-flex gap-4"><img src="/home.png" class="" alt=""> Home</h1>
+     <h1 class="inline-flex gap-4"><img src="home.png" class="" alt=""> Home</h1>
     </div> 
     <div  class=" flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/compass.png" class="" alt="">Explore</h1>
+     <h1 class="inline-flex gap-4"><img src="compass.png" class="" alt="">Explore</h1>
     </div>
      <div class="flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/heart.png" class="" alt=""> Saved</h1>
+     <h1 class="inline-flex gap-4"><img src="heart.png" class="" alt=""> Saved</h1>
     </div> 
     <div class="flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/shopping-cart.png" class="" alt=""> Cart</h1>
+     <h1 class="inline-flex gap-4"><img src="shopping-cart.png" class="" alt=""> Cart</h1>
     </div>
      <div class="flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/recent.png" class="" alt=""> Selling</h1>
+     <h1 class="inline-flex gap-4"><img src="recent.png" class="" alt=""> Selling</h1>
     </div> 
     <div class="flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/profile.png" class="" alt=""> Profile</h1>
+     <h1 class="inline-flex gap-4"><img src="profile.png" class="" alt=""> Profile</h1>
     </div> 
     <div class="flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/ic_round-history.png" class="" alt=""> Purchase History</h1>
+     <h1 class="inline-flex gap-4"><img src="ic_round-history.png" class="" alt=""> Purchase History</h1>
     </div> 
     <div class="flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/customer.png" class="" alt=""> Contact Us</h1>
+     <h1 class="inline-flex gap-4"><img src="customer.png" class="" alt=""> Contact Us</h1>
     </div> 
     <div class="flex flex-row align-middle">
-     <h1 class="inline-flex gap-4"><img src="/settings.png" class="" alt=""> Settings</h1>
+     <h1 class="inline-flex gap-4"><img src="settings.png" class="" alt=""> Settings</h1>
     </div>
 </div>
 <div id="card" class=" w-8/12 h-40 m-auto mt-3 justify-evenly flex flex-col bg-[url('/bg.png')] px-2 rounded-lg ">
@@ -62,13 +62,13 @@
     </div>
     <div class="flex w-1/2 justify-end gap-4 pr-4 items-center">
         <div id="search" class="flex items-center h-3/4 py-2 rounded-lg shadow-xl bg-slate-100 w-80 justify-around">
-            <div><img src="/Vector.png" alt=""></div>
+            <div><img src="Vector.png" alt=""></div>
             <div><p>Search Product</p></div>
-            <div><img src="/tune.png" alt=""></div>
+            <div><img src="tune.png" alt=""></div>
         </div>
-        <div><img src="/mail8.png" alt=""></div>
-        <div><img src="/notify.png" alt=""></div>
-        <div><img src="/moji.png" alt=""></div>
+        <div><img src="mail8.png" alt=""></div>
+        <div><img src="notify.png" alt=""></div>
+        <div><img src="moji.png" alt=""></div>
     </div>
 </div>
 
@@ -80,7 +80,7 @@
 
 <div id="centre" class="w-8/12 h-full flex flex-col ">
 <div  class="h-2/6 pr-9 flex bg-slate-50 w-11/12 ml-9 shadow-2xl rounded-3xl">
-    <div class="w-1/3 h-full ml-12 flex justify-center items-center"><img src="/image1.png" class="size-32 " alt=""></div>
+    <div class="w-1/3 h-full ml-12 flex justify-center items-center"><img src="image1.png" class="size-32 " alt=""></div>
     <div class="w-2/3 h-full flex justify-between ">
 <div class="flex justify-between flex-col p-3">
    <div> <h1 class="font-bold">Beats studio3 wireless headphones </h1></div>
@@ -90,7 +90,7 @@
     </div>
     <div class="">
         <div class="flex justify-between items-center w-full">
-            <button class="bg-white border-blue-900 border p-2 px-4 rounded-md"><img src="/fk.png" alt=""></button>
+            <button class="bg-white border-blue-900 border p-2 px-4 rounded-md"><img src="fk.png" alt=""></button>
             <button class="bg-white p-2 text-blue-600 px-4 border border-blue-900 rounded-md">Add to Cart</button>
             <button class=" p-2 px-5 bg-blue-600 border-blue-900 border text-white rounded-md">Buy now</button>
         </div>
@@ -103,47 +103,47 @@
 <div class="h-2/6 pl-4  flex justify-around py-4" >
     <div class="w-1/5  rounded-lg bg-white shadow-2xl h-full">
 <div class="flex w-full h-2/3 justify-center items-center  ">
-    <img src="/image_red.png" class="w-4/5/ mr-3 h-5/6" alt="">
+    <img src="image_red.png" class="w-4/5/ mr-3 h-5/6" alt="">
 </div>
 <div class="mt-1">
     <p class="text-xs text-center font-semibold">Original Beats Solo Pro </p>
-    <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3999    <img src="/plus.jpeg" alt="" class="size-5"></p>
+    <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3999    <img src="plus.jpeg" alt="" class="size-5"></p>
 </div>
     </div>
     <div class="w-1/5  rounded-lg bg-white shadow-2xl h-full">
         <div class="flex w-full h-2/3 justify-center items-center  ">
-            <img src="/image3.png" class="w-4/5/ mr-3 h-5/6" alt="">
+            <img src="image3.png" class="w-4/5/ mr-3 h-5/6" alt="">
         </div>
         <div class="mt-1">
             <p class="text-xs text-center font-semibold">Beats studio bluetooth </p>
-            <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3499   <img src="/plus.jpeg" alt="" class="size-5"></p>
+            <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3499   <img src="plus.jpeg" alt="" class="size-5"></p>
         </div>
             </div>
             <div class="w-1/5  rounded-lg bg-white shadow-2xl h-full">
                 <div class="flex w-full h-2/3 justify-center items-center  ">
-                    <img src="/image3-1.png" class="w-4/5/ mr-3 h-5/6" alt="">
+                    <img src="image3-1.png" class="w-4/5/ mr-3 h-5/6" alt="">
                 </div>
                 <div class="mt-1">
                     <p class="text-xs text-center font-semibold">Rockerz 109 Wireless </p>
-                    <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3999    <img src="/plus.jpeg" alt="" class="size-5"></p>
+                    <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3999    <img src="plus.jpeg" alt="" class="size-5"></p>
                 </div>
                     </div><div class="w-1/5  rounded-lg bg-white shadow-2xl h-full">
                         <div class="flex w-full h-2/3 justify-center items-center  ">
-                            <img src="/image4.png" class="w-4/5/ mr-3 h-5/6" alt="">
+                            <img src="image4.png" class="w-4/5/ mr-3 h-5/6" alt="">
                         </div>
                         <div class="mt-1">
                             <p class="text-xs text-center font-semibold">Bolts Wireless Bass </p>
-                            <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3999    <img src="/plus.jpeg" alt="" class="size-5"></p>
+                            <p class="text-xs items-center px-2 text-gray-800 flex justify-between" >Price Rs.3999    <img src="plus.jpeg" alt="" class="size-5"></p>
                         </div>
                             </div>
 </div>
 <div class="h-2/6 pl-8">
     <div class="h-1/3 w-full flex ">
-        <h1 class="flex items-center"><span class="text-blue-500 font-bold">Explore popular categories </span>     &nbsp;&nbsp;&nbsp;  <span class="text-xs">see all <img src="/Vector).png" class="inline" alt=""></span></h1>
+        <h1 class="flex items-center"><span class="text-blue-500 font-bold">Explore popular categories </span>     &nbsp;&nbsp;&nbsp;  <span class="text-xs">see all <img src="Vector).png" class="inline" alt=""></span></h1>
     </div>
     <div class="h-2/3 w-full flex justify-between items-center ">
         <div class="w-80 h-4/5 rounded-2xl flex justify-center shadow-lg items-center bg-gray-100">
-            <div class="w-1/2 h-full flex justify-center px-4 items-center "><img class=""  src="/brands.jpeg" alt=""></div>
+            <div class="w-1/2 h-full flex justify-center px-4 items-center "><img class=""  src="brands.jpeg" alt=""></div>
             <div class="border-l-2 border-black w-1/2 pl-4 pr-1 h-3/5">
                 <div class="flex flex-col justify-between  h-full w-full">
         <p class="text-xs text-left">Popular top  brands</p>
@@ -152,7 +152,7 @@
             </div>
         </div>
 <div class="w-80 h-4/5 rounded-2xl flex justify-center shadow-lg bg-gray-100 items-center ">
-    <div class="w-1/2 h-full flex justify-center px-4 items-center "><img class=""  src="/social.jpeg" alt=""></div>
+    <div class="w-1/2 h-full flex justify-center px-4 items-center "><img class=""  src="social.jpeg" alt=""></div>
     <div class="border-l-2 border-black w-1/2 pl-4 pr-1 h-3/5">
         <div class="flex flex-col justify-between  h-full w-full">
 <p class="text-xs text-left">Newest Seller</p>
@@ -167,14 +167,14 @@
 
 <div id="right aside" class="w-4/12  h-full ">
 <div class="  w-full p-6 flex content-center justify-center h-2/5 ">
-     <img src="/Group 66.png" class=""  alt="">
+     <img src="Group 66.png" class=""  alt="">
 </div>
  <div class=" w-full h-3/5 flex flex-col justify-around px-6 ">
 <div class="w-full h-1/5 pt-5  bg-white">
-    <h1 class="flex items-center justify-between"><span class="text-blue-500 font-bold">Daily Deals</span>   <span class="text-xs">view all <img src="/Vector).png" class="inline" alt=""></span></h1></div>
+    <h1 class="flex items-center justify-between"><span class="text-blue-500 font-bold">Daily Deals</span>   <span class="text-xs">view all <img src="Vector).png" class="inline" alt=""></span></h1></div>
 <div class="w-full h-1/5 flex justify-between items-center bg-white">
     <div class="">
-        <img src="/pure.png" alt="">
+        <img src="pure.png" alt="">
     </div>
         <div>
         <h1 class="text-xs leading-6"><span class="font-semibold">Beats new studio blue headset</span> <br>300 review 1853 orders</h1>
@@ -185,7 +185,7 @@
 </div>
 <div class="w-full h-1/5 flex justify-between items-center bg-white">
     <div class="">
-        <img src="/pure-2.png" alt="">
+        <img src="pure-2.png" alt="">
     </div>
         <div class="mr-14">
         <h1 class="text-xs leading-6"><span class="font-semibold">Apple AirPods Pro</span> <br>500 review 1932 orders</h1>
@@ -195,7 +195,7 @@
     </div>
 </div><div class="w-full h-1/5 flex justify-between items-center  bg-white">
     <div class="">
-        <img src="/pure-3.png" alt="">
+        <img src="pure-3.png" alt="">
     </div>
         <div>
         <h1 class="text-xs leading-6"><span class="font-semibold">Lenovo Wired Headphone</span> <br>300 review 1853 orders</h1>
